--- a/.htaccess
+++ b/.htaccess
@@ -7,4 +7,4 @@ RewriteRule ^([a-z_-]+)\/([a-z,0-9_-]+)\/([a-z,0-9_-]+)\/([a-z,0-9_-]+)\/([a-z,0
 
 # CONFIGURAR UTILIZAÇÃO DO HTTPS
 RewriteCond %{SERVER_PORT} 80
-#RewriteRule ^(.*)$ https://cometacargas.com.br/$1 [R,L]
+#RewriteRule ^(.*)$ http://signadvisory.com.br/$1 [R,L]
